fix: remove hardcoded dark mode

--- a/ui/components/multichain/dapp-connection-control-bar/dapp-connection-control-bar.scss
+++ b/ui/components/multichain/dapp-connection-control-bar/dapp-connection-control-bar.scss
@@ -1,6 +1,6 @@
 .dapp-connection-control-bar {
   flex-shrink: 0;
-  background-color: var(--color-dapp-control-bar-bg);
+  background-color: var(--color-background-default);
   border-top: 1px solid var(--color-border-muted);
 
   &__left-group {
@@ -25,14 +25,14 @@
     height: 10px;
     border-radius: 50%;
     background-color: var(--color-success-default);
-    border: 2px solid var(--color-dapp-control-bar-dot-border);
+    border: 2px solid var(--color-background-default);
   }
 
   &__network-button {
     cursor: pointer;
-    border: 1px solid var(--color-dapp-control-bar-border);
+    border: 1px solid var(--color-border-muted);
     border-radius: 12px;
-    background-color: var(--color-dapp-control-bar-button-bg);
+    background-color: var(--color-background-muted);
     height: 36px;
     flex-shrink: 0;
     justify-content: center;
@@ -40,7 +40,7 @@
     padding-right: 9px;
 
     &:hover {
-      background-color: var(--color-dapp-control-bar-hover);
+      background-color: var(--color-background-hover);
     }
 
     .mm-avatar-network {
@@ -50,9 +50,9 @@
   }
 
   &__combined-actions {
-    border: 1px solid var(--color-dapp-control-bar-border);
+    border: 1px solid var(--color-border-muted);
     border-radius: 12px;
-    background-color: var(--color-dapp-control-bar-button-bg);
+    background-color: var(--color-background-muted);
     height: 36px;
     flex-shrink: 0;
   }
@@ -68,14 +68,14 @@
     border-radius: 12px;
 
     &:hover {
-      background-color: var(--color-dapp-control-bar-hover);
+      background-color: var(--color-background-hover);
     }
   }
 
   &__divider {
     width: 1px;
     height: 16px;
-    background-color: var(--color-dapp-control-bar-border);
+    background-color: var(--color-border-muted);
     flex-shrink: 0;
   }
 }
