--- a/ui/css/utilities/colors.scss
+++ b/ui/css/utilities/colors.scss
@@ -25,9 +25,4 @@ Before adding a color here make sure that there isn't a design token available.
   --color-network-linea-mainnet-inverse: #fcfcfc;
   --welcome-bg-light: #fff2eb;
   --shield-membership-inactive-light: #dadce5;
-  --color-dapp-control-bar-bg: #242728;
-  --color-dapp-control-bar-dot-border: #25272a;
-  --color-dapp-control-bar-button-bg: #2b2d31;
-  --color-dapp-control-bar-border: #3a4046;
-  --color-dapp-control-bar-hover: #33363a;
 }
